<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.levi-schnorr</groupId>
  <artifactId>mavenmcserver</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>mavenmcserver</name>
  <description>Minecraft Server Maven Project</description>
  <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
  </properties>
  
  <repositories>
	  <repository>
		  <id>spigot-repo</id>
		  <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
	  </repository>
  </repositories>
  
  <dependencies>
	  <dependency>
		  <groupId>org.spigotmc</groupId>
		  <artifactId>spigot-api</artifactId>
		  <version>1.20.4-R0.1-SNAPSHOT</version>
		  <scope>provided</scope>
	  </dependency>
	  
	  <dependency>
		  <groupId>org.mockito</groupId>
		  <artifactId>mockito-all</artifactId>
		  <version>1.10.19</version>
		  <scope>test</scope>
	</dependency>
  </dependencies>
  
  <build>
	  <pluginManagement>
		  <plugins>
			  <plugin>
				  <groupId>org.apache.maven.plugins</groupId>
				  <artifactId>maven-surefire-plugin</artifactId>
				  <version>3.1.2</version>
				  
				  <configuration>
					    <argLine>
						  --add-opens java.base/java.lang=ALL-UNNAMED
 						 </argLine>
				  </configuration>
				  
				  <dependencies>
					  <dependency>
		 				 <groupId>org.junit.jupiter</groupId>
		 				 <artifactId>junit-jupiter-engine</artifactId>
		 				 <version>5.10.0</version>
	 				 </dependency>
	  
	 				 <dependency>
						  <groupId>org.junit.platform</groupId>
						  <artifactId>junit-platform-runner</artifactId>
						  <version>1.10.1</version>
	  				</dependency>
				 </dependencies>
			  </plugin>
		  </plugins>
	  </pluginManagement>
  </build>
  
</project>
